# QtRemoteDesktop

./: .gitignore  README.md
build-qt570-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  qrc_resources.cpp  qtcsettings.cmake  resources.qrc.depends
build-qt570-Debug/.cmake/api/v1/reply/: cache-v2-2d72f48ff3a6f7dd11e5.json  cmakeFiles-v1-f18e5ca04fcd69bcf524.json  cmakeFiles-v1-f97bfb3b519b9b93f6e3.json  codemodel-v2-081a4bdd6561bbc28e44.json  index-2026-06-15T08-22-38-0510.json  target-QtRemoteDesktop-Debug-8a1c5becbd238458f2ed.json  target-QtRemoteDesktopKeyboardSvc-Debug-3236483f502d2f9e6151.json  target-QtRemoteDesktop_autogen-Debug-5dfc16ff4ed0f679c457.json
build-qt570-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-eb272568c29b0611b9b8.json  index-2026-06-15T08-46-53-0562.json  target-QtRemoteDesktop-Debug-b4fbaa632628e3d3aeff.json  target-QtRemoteDesktopKeyboardSvc-Debug-4d02ed7dbea63ec96dc9.json
build-qt570-Debug/QtRemoteDesktop_autogen/: mocs_compilation.cpp
build-qt570-Debug/QtRemoteDesktop_autogen/ORNZQ2F6DW/: moc_authmanager.cpp  moc_filetransferservice.cpp  moc_inputmanager.cpp  moc_rdpserver.cpp  moc_screencapturer.cpp  moc_websocketserver.cpp
cmake/: FindFFmpeg.cmake
src/: CMakeLists.txt  linuxqt5.sh  linuxqt6.sh  main.cpp  onekeydeploy.sh  qtremotedesktop.pro  resources.qrc
src/html/: index - 副本 - 副本.html  index.html  index.html--
src/remotedesk/: CMakeLists.txt  main.cpp  resources.qrc
src/remotedesk/html/: user-management.html
src/remotedesk/res/: main.rc  uac.manifest
src/remotedesk/res/html/: index.html  login.html  shell.html
src/remotedesk/server/authmanager/: CMakeLists.txt  authmanager.cpp  authmanager.h
src/remotedesk/server/filetransferservice/: filetransferservice.cpp
src/remotedesk/server/helper_process/: CMakeLists.txt  helper_process.cpp  helper_process.h
src/remotedesk/server/inputmanger/: inputmanager.cpp  inputmanager.h  inputmanager_android.cpp  inputmanager_linux.cpp  inputmanager_mac.cpp  inputmanager_win.cpp
src/remotedesk/server/rdpserver/: CMakeLists.txt  rdpserver.cpp  rdpserver.h  rdpserver_linux.cpp  rdpserver_win.cpp
src/remotedesk/server/screencapturer/: CMakeLists.txt  screencapturer.cpp  screencapturer.h  screencapturer_android.cpp  screencapturer_linux.cpp  screencapturer_mac.cpp  screencapturer_win.cpp
src/remotedesk/server/secure_input_process/: CMakeLists.txt  secure_input_process.cpp  secure_input_process.h
src/remotedesk/server/service/: CMakeLists.txt  linux_service.cpp  linux_service.h  service.h  service_linux.cpp  service_stub.cpp  service_win.cpp  windows_service.cpp  windows_service.h
src/remotedesk/server/shell/: CMakeLists.txt  shell.cpp  shell.h  shell_linux.cpp  shell_mac.cpp  shell_win.cpp
src/remotedesk/server/singleapplication/: CMakeLists.txt  singleapplication.cpp  singleapplication.pri
src/remotedesk/server/videoencoder/: videoencoder.cpp  videoencoder.h
src/remotedesk/server/websocketserver/: websocketserver.cpp  websocketserver.h
src/remotedesk/sslperm/: cacert.crt
src/remotedesk/thridparty/startup/: CMakeLists.txt  startup_windows.cpp
src/remotedesk/thridparty/systemsleepblocker/: CMakeLists.txt  systemsleepblocker.h  systemsleepblocker.pri  systemsleepblocker_android.cpp  systemsleepblocker_mac.mm
src/res/: main.rc
src/server/: authmanager.cpp  authmanager.h  filetransferservice.cpp  filetransferservice.h  inputmanager.cpp  inputmanager.h  inputmanager_win.cpp  rdpserver.cpp  rdpserver.h  screencapturer.cpp  screencapturer.h  screencapturer_linux.cpp  screencapturer_win.cpp  videoencoder.cpp  videoencoder.h  websocketserver.cpp  websocketserver.h
src/server/authmanager/: authmanager.cpp
src/server/filetransferservice/: CMakeLists.txt  filetransferservice.cpp
src/server/inputmanger/: CMakeLists.txt  inputmanager_mac.cpp
src/server/rdpserver/: CMakeLists.txt  rdpserver.cpp  rdpserver.h
src/server/screencapturer/: CMakeLists.txt  screencapturer.cpp  screencapturer.h  screencapturer_android.cpp  screencapturer_linux.cpp  screencapturer_mac.cpp  screencapturer_win.cpp
src/server/singleapplication/: CMakeLists.txt  singleapplication.cpp  singleapplication.h
src/server/videoencoder/: CMakeLists.txt  videoencoder.cpp  videoencoder.h
src/server/websocketserver/: CMakeLists.txt  websocketserver.cpp
src/service/: CMakeLists.txt  main.cpp  main.rc  service.cpp  service.h
src/sslperm/: privkey.pem
src/thridparty/ffmpeg/windows/include/libavutil/: ffversion.h
src/thridparty/startup/: startup.cpp  startup.h  startup.pri  startup_linux.cpp
src/thridparty/systemsleepblocker/: CMakeLists.txt  systemsleepblocker.cpp  systemsleepblocker_linux.cpp  systemsleepblocker_win.cpp
